--- a/jenkins/jenkins-deployment.yml
+++ b/jenkins/jenkins-deployment.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: jenkins
     spec:
+      serviceAccount: jenkins
       nodeSelector:
         dedicated: master
       containers:
