--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -17,3 +17,5 @@ RUN apt-get update && \
     echo "deb http://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list && \
     apt-get update && \
     apt-get install -y kubectl
+
+USER jenkins
