--- a/config-server/dev-config-server-service.yml
+++ b/config-server/dev-config-server-service.yml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: config-server-service
+  namespace: dev
 spec:
   selector:
     app: config-server
