--- a/config-server/dev-config-server-deployment.yml
+++ b/config-server/dev-config-server-deployment.yml
@@ -22,7 +22,7 @@ spec:
             - containerPort: 8888
           volumeMounts:
             - name: config-volume
-              mountPath: /app/application.yml
+              mountPath: /app/
       volumes:
         - name: config-volume
           configMap:
