Fixed config server service

--- a/config-server/dev-config-server-service.yml
+++ b/config-server/dev-config-server-service.yml
@@ -6,8 +6,9 @@ metadata:
 spec:
   selector:
     app: config-server
-  type: ExternalName
-  externalName: config-server
+#  type: ExternalName
+#  externalName: config-server
   ports:
-    - port: 8888
+    - protocol: TCP
+      port: 80
       targetPort: 8888
