--- a/postgres/postgres-service.yml
+++ b/postgres/postgres-service.yml
@@ -1,12 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: postgres-service
+  name: postgres
 spec:
   selector:
     app: postgres
-  type: ExternalName
-  externalName: postgres
   ports:
-    - port: 5432
+    - protocol: TCP
+      port: 5432
       targetPort: 5432
