--- a/config-server/dev-values.yaml
+++ b/config-server/dev-values.yaml
@@ -8,7 +8,7 @@ replicaCount: 2
 image:
   repository: kozhenkov/config-server
   tag: latest
-  pullPolicy: always
+  pullPolicy: Always
 
 nameOverride: ""
 fullnameOverride: ""
