Add prometheus-target label, metrics port

--- a/config-server/templates/service.yaml
+++ b/config-server/templates/service.yaml
@@ -8,10 +8,12 @@ metadata:
     helm.sh/chart: {{ include "config-server.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    prometheus-target: {{ .Chart.name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: http-metrics
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
   selector:
